[gd_scene load_steps=12 format=3 uid="uid://cy6ot0oc7dmqp"]

[ext_resource type="PackedScene" uid="uid://cxn2m3havcmil" path="res://src/Items/Balls/Ball.tscn" id="1_wrgi1"]
[ext_resource type="Script" path="res://src/Items/Balls/SnailBall.gd" id="2_gphui"]
[ext_resource type="Shader" path="res://assets/shader/contour.gdshader" id="2_hhpcs"]
[ext_resource type="Texture2D" uid="uid://d33u8f6bfhj4m" path="res://assets/art/effects/round.png" id="4_3m01w"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g07c1"]
resource_local_to_scene = true
shader = ExtResource("2_hhpcs")
shader_parameter/activated = false
shader_parameter/contour_color = Color(1, 1, 0.9, 0.9)

[sub_resource type="Gradient" id="Gradient_cnh10"]
resource_local_to_scene = true
offsets = PackedFloat32Array(0, 0.00699301, 0.244755, 0.468531, 0.839161, 1)
colors = PackedColorArray(1, 0, 0.580392, 0, 0, 0, 0, 0.258741, 0.535156, 0.535156, 0.535156, 0.705882, 0.839844, 0.839844, 0.839844, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_1yanl"]
resource_local_to_scene = true
offsets = PackedFloat32Array(0, 0.020202, 0.131313, 0.50505, 0.808081, 1)
colors = PackedColorArray(1, 0, 0.580392, 0, 1, 1, 1, 0, 1, 1, 1, 1, 0.839844, 0.839844, 0.839844, 1, 0.533333, 0.533333, 0.533333, 0.705882, 0, 0, 0, 0.258824)

[sub_resource type="Curve" id="Curve_d64fx"]
_data = [Vector2(0, 0.856818), 0.0, 3.55714, 0, 0, Vector2(1, 0.209091), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_ddhk5"]
resource_local_to_scene = true
offsets = PackedFloat32Array(0, 0.398601, 1)
colors = PackedColorArray(0.988343, 0.901637, 0.908888, 1, 0.592, 0.8, 0.176, 1, 0.46, 0.374133, 0.138, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_4gkig"]
resource_local_to_scene = true
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_l83bk"]
radius = 192.0

[node name="SnailBall" instance=ExtResource("1_wrgi1")]
script = ExtResource("2_gphui")
follow_damping = 0.7
follow_speed = 250.0
follow_delay = 0.7
impact_effect = 6
dust_threshold = 100.0
impact_threshold = 200.0

[node name="Visuals" parent="." index="0"]
material = SubResource("ShaderMaterial_g07c1")
col1 = Color(0.904905, 0.963866, 0.572164, 1)
col2 = Color(0.540033, 0.68, 0.238, 1)
col3 = Color(0.303009, 0.253134, 0.142857, 1)

[node name="Reconstruction" parent="Visuals" index="1"]
color_ramp = SubResource("Gradient_cnh10")

[node name="Destruction" parent="Visuals" index="2"]
color_ramp = SubResource("Gradient_1yanl")

[node name="SpeedParticles" type="CPUParticles2D" parent="Visuals" index="5"]
z_index = -1
emitting = false
amount = 12
lifetime = 0.18
randomness = 0.05
lifetime_randomness = 0.29
fract_delta = false
texture = ExtResource("4_3m01w")
direction = Vector2(0, 0)
spread = 0.0
gravity = Vector2(0, 0)
scale_amount_min = 0.08
scale_amount_max = 0.08
scale_amount_curve = SubResource("Curve_d64fx")
color_ramp = SubResource("Gradient_ddhk5")

[node name="collision" parent="." index="1"]
shape = SubResource("CircleShape2D_4gkig")

[node name="PlayerDetector" type="Area2D" parent="." index="4"]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector" index="0"]
shape = SubResource("CircleShape2D_l83bk")
debug_color = Color(0.65142, 0.77, 0.5544, 0.419608)

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="update_last_holder" unbinds=1]
